deploy/manifests/envoy-gateway/envoy-gateway-resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  annotations: {argocd.argoproj.io/sync-wave: "4"}
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: eg-system
  annotations: {argocd.argoproj.io/sync-wave: "1"}
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: eg-system
  annotations: 
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: "cert-manager/cluster-ca"
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: eg-client-tls
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: eg-refgrant
  namespace: eg-system
  annotations: {argocd.argoproj.io/sync-wave: "4"}
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cert-manager
      name: eg
  to:
    - group: ""
      kind: Secret
      name: eg-client-tls    
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eg-http
  namespace: eg-system
  annotations: {argocd.argoproj.io/sync-wave: "4"}
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:  
        path:
          type: PathPrefix
          value: /accounts
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: eg-system
  annotations: {argocd.argoproj.io/sync-wave: "4"}
spec:
  parentRefs:
    - name: eg
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
